# prob_theory_lab_01

./: README.md  makefile  requirements.txt  setup.cfg  setup.py
prob_theory_lab_01/: __main__.py  hipothesis_dialogue.py  hipothesis_dialogue.ui  hypothesis_dialogue.py  hypothesis_dialogue.ui  main_window.py  main_window.ui  mainwindow.py  mpl_widget.py  source.py
prob_theory_lab_01/ui/: hypothesis_dialogue.py  main_window.py  makefile
requirements/: dev.in  dev.txt
src/mpl_widget/: __init__.py  mpl_widget.py
src/prob_theory_lab_01/: source.py
src/widgets_autogen/: hypothesis_dialogue.py  main_window.py
ui/: makefile
