[metadata]
name = prob_theory_lab_01
version = 0.1

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prob_theory_lab_01 = prob_theory_lab_01.source:main
